--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.16.0",
+    "rehype-autolink-headings": "^7.0.0",
+    "rehype-code-titles": "^1.2.0",
+    "rehype-highlight": "^7.0.0",
+    "rehype-slug": "^6.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
